src/assets/main.css
@import './base.css';

#app {
  margin: 0 auto;
}

@media (max-width: 1200px) {

  /* TODO: responsive  */
}

h1 {
  margin: 0;
  font-size: var(--font-size-large);
  font-weight: 400;
  font-style: normal;
  letter-spacing: 0px;
  text-align: center;
  line-height: 30px;
  font-family: "Roboto Mono", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
}

/* Used for Journal Entry headings */
h2 {
  font-size: var(--font-size-smaller-medium);
  font-weight: 500;
  letter-spacing: 0.11em;
  text-transform: uppercase;
  text-align: center;
}

/* Used for Subtitles*/
h3 {
  margin-top: 11px;
  margin-bottom: 0;
  font-size: var(--font-size-medium);
  font-style: normal;
  font-weight: 400;
  line-height: 25px;
  letter-spacing: 0.03em;
  text-align: center;
  font-family: "Roboto Mono", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
}

p {
  font-size: var(--font-size-medium);
}

.heading-logged-out {
  text-align: left;
}

a {
  text-decoration: none;
  color: unset;
}

label {
  padding-top: 20px;
  padding-bottom: 11px;
  font-size: var(--font-size-label);
}

input {
  padding: 0;
  background-color: transparent;
  border-radius: 10px;
  height: 55px;
  border-color: var(--dark-gray);
  border-width: 1px;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  color: var(--color-text);
}

/* this is why navbar items used to be green */
/*
@media (hover: hover) {
  a:hover {
    background-color: hsla(160, 100%, 37%, 0.2);
  }
} */


/* Nav-Bar */

nav {
  height: var(--nav-height);
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  width: 100%;
  padding: var(--nav-top-padding) var(--nav-horizontal-padding) var(--nav-bottom-padding) var(--nav-horizontal-padding);
}

.router-link-active {
  color: var(--color-text);
}

.router-link-active:hover {
  color: var(--element-hovered);
}

a.router-link-exact-active {
  color: var(--color-text);
}

a.router-link-exact-active:hover {
  color: var(--element-hovered);
}

a:first-of-type {
  border: 0;
}

nav .menu {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  height: 20px;
  column-gap: 36px;
}

nav .menu .icons {
  display: flex;
  column-gap: 20px;
  align-items: center;
}

nav .menu .icons a, nav .menu .icons button {
  margin: 0;
  padding: 0;
}

nav .menu .icons a {
  display: flex;
  align-items: center; /* Center align SVG and text within RouterLink */
}

nav .menu .icons button {
  display: flex;
  align-items: center; /* Center align SVG within button */
}

nav .logo {
  height: 20px;
  margin: 0;
}

button {
  color: var(--color-text);
  border-style: none;
  background-color: var(--element-bg);
  cursor: pointer;
}



/* Logged Out Pages */
.wrapper-logged-out {
  position: relative;
  display: grid;
  grid-template-columns: auto 464px auto; /* 5 */
  grid-template-rows: 229px auto; /* 6 */
}

.wrapper-logged-out .content {
  position: relative;
  grid-area: 2 / 2 / 3 / 3;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  width: 100%;
}

.wrapper-logged-out .content .heading {
  flex-direction: column;
  justify-content: flex-start;
}

.forms {
  padding-top: 4vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  margin-bottom: 287px;
}

.forms input {
  padding: 24px;
}

.sub-password {
  display: flex;
  font-size: 11px;
  letter-spacing: -0.01em;
}

.logged-out-button {
  margin-top: 60px;

  height: 45px;
  border: 1px solid rgba(102, 102, 102, 0.1);
  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1);
  border-radius: 30px;

  font-weight: 400;
  font-size: 19px; /* TODO: make variable */
  line-height: 150%;
  font-family: "Roboto Mono", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
}

/* Heading with Subheading */
.instructions {
  display: flex;
  flex-direction: column;
  grid-area: 2 / 1 / 3 / 6;
  align-items: center;
}

/* Writing */

